--- a/src/App.css
+++ b/src/App.css
@@ -1,96 +1,116 @@
 @import url('https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&display=swap');
 @import 'bootstrap/dist/css/bootstrap.min.css';
-*{
-   margin: 0;
-   padding: 0;
-   
-  
-     
+
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    background-color:  #ffffff;
-    overflow-x: hidden;
+
+body {
+  background-color: #ffffff;
+  overflow-x: hidden;
 }
-.container-title{
-    background-image: url(../imagens/casamento.jpg);
-    max-width: 100vw;
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
+
+.container-title {
+  background-image: url(../imagens/casamento.jpg);
+  max-width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.content{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    font-family: "Ballet", cursive;
- 
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-family: "Ballet", cursive;
 }
+
 .count {
-    background-color: #FFBE98;
-    max-width: 100vw;
-    height: 50vh;
+  background-color: #ffbe98;
+  max-width: 100vw;
+  height: 50vh;
 }
-.container-section{
-    width: 100vw;
-    height: 100vh;
 
+.container-section {
+  width: 100vw;
+  height: 100vh;
 }
-.tittle-count{
-    color: aliceblue;
-    width: 100%;
-    padding-top: 0.5em;
-    font-size: 2em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.count-content{
-    height: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-}
-.container-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.poema{
-    margin: 2rem 0 4rem 0;
-    font-style: italic;
-    align-items: center;
-    
-}
-.search{
-    width: 280px;
-    margin-top: 30px;
-}
-.container-forms{
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
-}
-.button-search{
-    border: solid 2px #FFBE98;
-    color: #FFBE98;
 
+.tittle-count {
+  color: aliceblue;
+  width: 100%;
+  padding-top: 0.5em;
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.button-search:hover{
-    background-color: #FFBE98;
-    border: #FFBE98;
+
+.count-content {
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
+
+.container-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.poema {
+  margin: 2rem 0 4rem 0;
+  font-style: italic;
+  align-items: center;
+}
+
+.search {
+  width: 280px;
+  margin-top: 30px;
+}
+
+.container-forms {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-search {
+  border: solid 2px #ffbe98;
+  color: #ffbe98;
+}
+
+.button-search:hover {
+  background-color: #ffbe98;
+  border: #ffbe98;
+}
+
 body::-webkit-scrollbar-thumb {
-    border-radius: 20px;  
-    background-color: grey;     /* roundness of the scroll thumb */
+  border-radius: 20px;
+  background-color: grey;
+}
+
+body::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Media Queries for responsiveness */
+@media screen and (max-width: 768px) {
+  .search {
+    width: 80%;
+    max-width: 280px;
   }
-  body::-webkit-scrollbar {
-    width: 6px;          
+  
+  .container-section {
+    padding: 20px;
   }
- 
+}
